updated org dashboard

--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700&display=swap"
     />
-    <meta
-      name="description"
-      content="ICare app to help peoples"
-    />
+    <meta name="description" content="ICare app to help peoples" />
     <title>ICare</title>
   </head>
   <body>
